--- a/back-end/package.json
+++ b/back-end/package.json
@@ -25,8 +25,9 @@
     "express-validator": "^6.12.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^5.12.13",
+    "mongoose": "^5.13.0",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.9",
     "password-validator": "^5.1.1",
     "request": "^2.88.2",
     "unique-names-generator": "^4.5.0"
