--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "i": "^0.3.6",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
