--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "build": "^0.1.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "i": "^0.3.6",
@@ -16,7 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
   },
